#6: Refactor fetchCoordinatesFromCityName method.